# ChangeLog for app-pda/synce-libsynce
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-pda/synce-libsynce/Attic/ChangeLog,v 1.11 2004/07/01 19:23:59 eradicator Exp $

  01 Jul 2004; Jeremy Huddleston <eradicator@gentoo.org>
  synce-libsynce-0.7.ebuild:
  virtual/glibc -> virtual/libc

  05 Jun 2004; David Holm <dholm@gentoo.org> synce-libsynce-0.8.9.ebuild:
  Added to ~ppc.

  25 Apr 2004; Aron Griffis <agriffis@gentoo.org> synce-libsynce-0.7.ebuild,
  synce-libsynce-0.8.1.ebuild:
  Add die following econf for bug 48950

*synce-libsynce-0.8.9 (30 Mar 2004)

  30 Mar 2004; Troy Dack <troy@gentoo.org> synce-libsynce-0.8.9.ebuild,
  files/0.8.9/synce-libsynce-0.8.9-gcc33.patch:
  Patch to build properly with gcc-3.3. Thanks to Geoffrey SCOUTHEETEN
  <scout@scoutheeten.com> for the patch. Closes Bug #45878.

  26 Mar 2004; Troy Dack <troy@gentoo.org> synce-libsynce-0.8.9.ebuild:
  Version bump.

*synce-libsynce-0.8.1 (02 Sep 2003)

  02 Sep 2003; Alastair Tse <liquidx@gentoo.org> synce-libsynce-0.8.1.ebuild:
  version bump and cleanup. like removing gnome useflag

*synce-libsynce-0.8 (02 Sep 2003)

  02 Sep 2003; Alastair Tse <liquidx@gentoo.org> :
  version bump

*synce-libsynce-0.7 (24 Feb 2003)

  24 Feb 2003; Zach Welch <zwelch@gentoo.org> synce-libsynce-0.7.ebuild files/digest-synce-libsynce-0.7 :
  New version; see bug 16105

*synce-libsynce-0.3 (27 Nov 2002)

  27 Nov 2002; Zach Welch <zwelch@gentoo.org> :
  Split from ebuild submitted in bug 11184 by faune@broadpark.no

