@@ -1,9 +1,11 @@
-MD5 fd7e874df4306b9c86f26a217ffe8dbb synce-libsynce-0.7.ebuild 622
-MD5 7ee6822bf3c9b63de20e8935de5462e5 synce-libsynce-0.8.9.ebuild 677
-MD5 27873399dee1b046770c7d82296c8e26 synce-libsynce-0.8.1.ebuild 620
 MD5 fcc2c1daeb7cbe82f107c952544654d3 ChangeLog 1555
 MD5 075fea99b82d61028585dc3e42f00466 metadata.xml 156
+MD5 fd7e874df4306b9c86f26a217ffe8dbb synce-libsynce-0.7.ebuild 622
+MD5 27873399dee1b046770c7d82296c8e26 synce-libsynce-0.8.1.ebuild 620
+MD5 7ee6822bf3c9b63de20e8935de5462e5 synce-libsynce-0.8.9.ebuild 677
+MD5 7a1cd7d2ce6784ba4a8a3b0cbe46456b synce-libsynce-0.9.0.ebuild 580
+MD5 7d9811314c87ae1229c45598d0bb2c95 files/digest-synce-libsynce-0.7 70
 MD5 c178478ce18853e31d781c5808d7ee74 files/digest-synce-libsynce-0.8.1 72
 MD5 f7dab5c224f57f0f02ce747c58c0342d files/digest-synce-libsynce-0.8.9 72
-MD5 7d9811314c87ae1229c45598d0bb2c95 files/digest-synce-libsynce-0.7 70
+MD5 aeb7b4bf53b2d175dfa22980a8698163 files/digest-synce-libsynce-0.9.0 72
 MD5 32106e3bd72b88a593e10392242917fa files/0.8.9/synce-libsynce-0.8.9-gcc33.patch 431
