@@ -1,0 +1,21 @@
+# Copyright 1999-2004 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/app-pda/synce-libsynce/Attic/synce-libsynce-0.9.0.ebuild,v 1.1 2004/09/25 17:41:08 liquidx Exp $
+
+inherit eutils
+
+DESCRIPTION="Common Library for Synce (connecting WinCE devices to Linux)"
+HOMEPAGE="http://sourceforge.net/projects/synce/"
+SRC_URI="mirror://sourceforge/synce/${P}.tar.gz"
+
+LICENSE="MIT"
+SLOT="0"
+KEYWORDS="~x86 ~ppc"
+IUSE=""
+
+DEPEND=">=dev-libs/check-0.8.3.1"
+
+src_install() {
+	make DESTDIR=${D} install || die
+	dodoc README
+}
